Hitting Cmd+F multiple times in a row causes window to disappear
When hitting Cmd+F multiple times in a row quite quickly, the video window ends up either way smaller than it initially was, or it totally disappears.
When hitting Cmd+F multiple times in a row quite quickly, the video window ends up either way smaller than it initially was, or it totally disappears.
added Component::Interface: macOS label
If you are on 10.7 or 10.8, could you check this pre-release build of VLC 2.1 to see if you can still reproduce this issue?
I can confirm that this is still an issue in 2.1.
See #8746 (closed). Also causes problems in main window layout.
changed milestone to %2.2.x maintenance branch
commit 0206828a Author: David Fuhrmann david.fuhrmann@googlemail.com Date: Sun Jan 26 18:17:21 2014 +0100
macosx: Fix issue where window vanishes from screen if fullscreen is toggled fast in a row
Extends bool to describe both enter and exit fullscreen transitions.
close [#8074](https://code.videolan.org/videolan/vlc/-/issues/8074)
Original author: david.fuhrmann@googlemail.com
added Status::fixed label
closed
mentioned in issue #8746 (closed)
mentioned in issue #8755 (closed)
VideoLAN code repository instance