macosx: Fix issue where window vanishes from screen if fullscreen is toggled fast in a row

Extends bool to describe both enter and exit fullscreen transitions.

close #8074